Rearrange the order of the homepage.

--- a/website/index.html
+++ b/website/index.html
@@ -34,59 +34,13 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
     </div>
 </section>
 
-<!-- Photo Banner -->
-<div class="photo-banner">
-    <div class="photo-banner-item">
-        <img src="{{ '/assets/images/events/photo-banner-1-event.jpg' | relative_url }}" alt="TEDxBreckenridge attendees enjoying ideas worth spreading at the Riverwalk Center in Breckenridge, Colorado" loading="lazy">
-    </div>
-    <div class="photo-banner-item">
-        <img src="{{ '/assets/images/events/photo-banner-2-audience.jpg' | relative_url }}" alt="Engaged audience members listening to inspiring talks at TEDxBreckenridge" loading="lazy">
-    </div>
-    <div class="photo-banner-item">
-        <img src="{{ '/assets/images/events/photo-banner-3-speaker.jpg' | relative_url }}" alt="Speaker sharing ideas on the red TEDxBreckenridge stage" loading="lazy">
-    </div>
-    <div class="photo-banner-item">
-        <img src="{{ '/assets/images/events/photo-banner-4-stage.jpg' | relative_url }}" alt="TEDxBreckenridge stage with iconic red circle and mountain backdrop" loading="lazy">
-    </div>
-    <div class="photo-banner-item">
-        <img src="{{ '/assets/images/events/photo-banner-5-community.jpg' | relative_url }}" alt="TEDxBreckenridge community connecting and networking in Breckenridge" loading="lazy">
-    </div>
-</div>
-
-<!-- Donate Section -->
-<section class="section section-full theme-section" id="donate" style="background: #fff;">
-    <div class="section-inner">
-        <div class="theme-content theme-content-reverse">
-            <div class="theme-visual">
-                <img src="{{ '/assets/images/events/donate-section-speaker.jpg' | relative_url }}" alt="Speaker presenting on stage at TEDxBreckenridge event" loading="lazy">
-            </div>
-            <div class="theme-text">
-                <div class="section-header">
-                    <div class="section-eyebrow">Support Our Mission</div>
-                    <h2 class="section-title">Help Bring Ideas Worth Spreading to Summit County</h2>
-                </div>
-                <p>TEDxBreckenridge is a 501(c)(3) nonprofit organization run entirely by local volunteers. Every dollar you contribute goes directly toward making our events possible—from securing speakers and venues to producing high-quality content that reaches thousands of people in our community and beyond.</p>
-                <p>Your donation helps ensure that transformative ideas remain accessible to everyone, regardless of their ability to pay. Together, we're building a platform for innovation, creativity, and meaningful conversation in the heart of the Rockies.</p>
-                <div style="margin-top: 32px;">
-                    <p style="margin: 0 0 8px 0; font-weight: 600; color: #333;">Why Your Support Matters:</p>
-                    <ul style="margin: 0; padding-left: 20px; color: #666; line-height: 1.8;">
-                        <li>Fund speaker preparation and event production</li>
-                        <li>Keep ticket prices accessible to all community members</li>
-                        <li>Support year-round programming including Salon events</li>
-                        <li>Invest in video production and content distribution</li>
-                    </ul>
-                </div>
-                <div style="margin-top: 32px;">
-                    <a href="https://givebutter.com/tedxbreckenridge" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Make a donation (opens in new window)">Make a Donation</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 <!-- Save the Date Section -->
-<section class="section section-full" id="main-event">
+<section class="section section-full" id="main-event" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
     <div class="save-date-container">
+        <div class="save-date-image">
+            <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
+        </div>
+
         <div class="save-date-content">
             <div class="section-eyebrow">Save the Date</div>
             <h2 style="font-size: 3rem; line-height: 1.1; margin: 16px 0 32px;">TEDxBreckenridge 2026 Main Event</h2>
@@ -104,15 +58,33 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
                 <a href="#mailing-list" class="btn btn-primary">Join Our Mailing List</a>
             </div>
         </div>
+    </div>
+</section>
 
-        <div class="save-date-image">
-            <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
+<!-- Donate Section -->
+<section class="section section-full theme-section" id="donate" style="background: #fff; border-top: 1px solid #e0e0e0;">
+    <div class="section-inner">
+        <div class="theme-content">
+            <div class="theme-text">
+                <div class="section-header">
+                    <div class="section-eyebrow">Support Our Mission</div>
+                    <h2 class="section-title">Help Bring Ideas Worth Spreading to Summit County</h2>
+                </div>
+                <p>TEDxBreckenridge is a 501(c)(3) nonprofit run entirely by local volunteers. Your contribution directly supports speakers, venues, production, and keeping events accessible to everyone in our community.</p>
+                <div style="margin-top: 32px; display: flex; gap: 16px; flex-wrap: wrap;">
+                    <a href="https://givebutter.com/tedxbreckenridge" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Make a donation (opens in new window)">Make a Donation</a>
+                    <a href="/donate-local-nonprofit-in-breckenridge/" class="btn btn-secondary">Learn More</a>
+                </div>
+            </div>
+            <div class="theme-visual">
+                <img src="{{ '/assets/images/events/donate-section-speaker.jpg' | relative_url }}" alt="Speaker presenting on stage at TEDxBreckenridge event" loading="lazy">
+            </div>
         </div>
     </div>
 </section>
 
 <!-- Featured Talks Section -->
-<section class="section section-full" id="featured-talks" style="background: #fff;">
+<section class="section section-full" id="featured-talks" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Featured Talks</div>
@@ -181,8 +153,27 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
     </div>
 </section>
 
+<!-- Photo Banner -->
+<div class="photo-banner">
+    <div class="photo-banner-item">
+        <img src="{{ '/assets/images/events/photo-banner-1-event.jpg' | relative_url }}" alt="TEDxBreckenridge attendees enjoying ideas worth spreading at the Riverwalk Center in Breckenridge, Colorado" loading="lazy">
+    </div>
+    <div class="photo-banner-item">
+        <img src="{{ '/assets/images/events/photo-banner-2-audience.jpg' | relative_url }}" alt="Engaged audience members listening to inspiring talks at TEDxBreckenridge" loading="lazy">
+    </div>
+    <div class="photo-banner-item">
+        <img src="{{ '/assets/images/events/photo-banner-3-speaker.jpg' | relative_url }}" alt="Speaker sharing ideas on the red TEDxBreckenridge stage" loading="lazy">
+    </div>
+    <div class="photo-banner-item">
+        <img src="{{ '/assets/images/events/photo-banner-4-stage.jpg' | relative_url }}" alt="TEDxBreckenridge stage with iconic red circle and mountain backdrop" loading="lazy">
+    </div>
+    <div class="photo-banner-item">
+        <img src="{{ '/assets/images/events/photo-banner-5-community.jpg' | relative_url }}" alt="TEDxBreckenridge community connecting and networking in Breckenridge" loading="lazy">
+    </div>
+</div>
+
 <!-- Sponsors Section -->
-<section class="section section-full sponsors-section" id="sponsors">
+<section class="section section-full sponsors-section" id="sponsors" style="background: #fff; border-top: 1px solid #e0e0e0;">
     <div class="section-inner" style="max-width: 900px; margin: 0 auto;">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Partnership Opportunities</div>
@@ -220,7 +211,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Mailing List Section -->
-<section class="newsletter-section" id="mailing-list">
+<section class="newsletter-section" id="mailing-list" style="border-top: 1px solid #e0e0e0;">
     <div class="newsletter-content">
         <h2>Stay in the know</h2>
         <p>Join our mailing list for updates on upcoming events, speaker announcements, and Salon gatherings.</p>
