Fix inconsistent typography on homepage.

--- a/website/index.html
+++ b/website/index.html
@@ -43,14 +43,14 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
         <div class="save-date-content">
             <div class="section-eyebrow">Save the Date</div>
-            <h2 style="font-size: 3rem; line-height: 1.1; margin: 16px 0 32px;">TEDxBreckenridge 2026 Main Event</h2>
+            <h2 style="font-size: 2.5rem; line-height: 1.2; margin: 16px 0 32px;">TEDxBreckenridge 2026 Main Event</h2>
 
             <div style="margin-bottom: 32px;">
                 <p class="date-large" style="font-size: 2rem; font-weight: 700; margin-bottom: 8px; color: #e62b1e;">October 3, 2026</p>
-                <p style="font-size: 1.25rem; color: #666; margin-bottom: 24px;">Riverwalk Center<br>Breckenridge, Colorado</p>
+                <p style="font-size: 17px; font-weight: 300; color: #666; margin-bottom: 24px;">Riverwalk Center<br>Breckenridge, Colorado</p>
             </div>
 
-            <p style="font-size: 1.125rem; line-height: 1.6; margin-bottom: 32px; color: #333;">
+            <p style="font-size: 17px; font-weight: 300; line-height: 1.75; margin-bottom: 32px; color: #333;">
                 Mark your calendar for an inspiring evening of ideas worth spreading. This year's theme, speaker lineup, and ticket information will be announced in the coming months.
             </p>
 
