Add google maps embeds.

--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,10 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
             <div style="margin-bottom: 32px;">
                 <p class="date-large" style="font-size: 2rem; font-weight: 700; margin-bottom: 8px; color: #e62b1e;">October 3, 2026</p>
-                <p style="font-size: 17px; font-weight: 300; color: #666; margin-bottom: 24px;">Riverwalk Center<br>Breckenridge, Colorado</p>
+                <p style="font-size: 17px; font-weight: 300; color: #666; margin-bottom: 24px;">Riverwalk Center<br>150 W Adams Ave<br>Breckenridge, Colorado 80424</p>
+                <div style="margin: 24px 0;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3065.869!2d-106.0436!3d39.4817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a763d6f3c3c3d%3A0x8b3c3c3c3c3c3c3c!2s150%20W%20Adams%20Ave%2C%20Breckenridge%2C%20CO%2080424!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing Riverwalk Center at 150 W Adams Ave, Breckenridge, CO 80424"></iframe>
+                </div>
             </div>
 
             <p style="font-size: 17px; font-weight: 300; line-height: 1.75; margin-bottom: 32px; color: #333;">
