--- a/website/salon.html
+++ b/website/salon.html
@@ -43,6 +43,9 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                     <p style="margin: 0 0 16px 0;"><strong>January 15, 2026 • 6:00 PM</strong><br>
                     EVO3 Workspace<br>
                     620 E Main St #6, Frisco, CO 80443</p>
+                    <div style="margin: 16px 0;">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.7747895686373!2d-106.09786892396915!3d39.57455871140394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a76cd7c2c0f63%3A0x7b7c0a3e3e0e0e0e!2s620%20Main%20St%20%236%2C%20Frisco%2C%20CO%2080443!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing EVO3 Workspace location at 620 E Main St #6, Frisco, CO 80443"></iframe>
+                    </div>
                     <p style="margin: 0;"><strong>Suggested donation:</strong> $10<br>
                     <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
                 </div>
