Add internal links.

--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
             <div style="display: flex; gap: 16px; flex-wrap: wrap;">
                 <a href="#mailing-list" class="btn btn-primary">Join Our Mailing List</a>
+                <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+2026+Main+Event&dates=20261003T180000/20261003T220000&details=Ideas+worth+spreading+in+the+heart+of+the+Rockies.+Join+us+for+an+evening+of+inspiring+talks+and+meaningful+connections.&location=Riverwalk+Center,+150+W+Adams+Ave,+Breckenridge,+CO+80424&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
             </div>
         </div>
     </div>
