--- a/website/salon.html
+++ b/website/salon.html
@@ -37,7 +37,7 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                     <h2 class="section-title">Elevated Cuisine:<br>The Science and Art of Cooking at Altitude</h2>
                 </div>
                 <p>Why does water boil at a lower temperature in the mountains? Why do cakes rise too fast—or not at all? And how do professional chefs adapt their techniques when cooking at 9,000 feet?</p>
-                <p>In this TEDxBreckenridge Salon, the culinary team from Colorado Mountain College explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
+                <p>In this TEDxBreckenridge Salon, the culinary team from <a href="https://coloradomtn.edu/" target="_blank" rel="noopener noreferrer">Colorado Mountain College</a> explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
                 <p>Come ready to think, ask questions, and leave with ideas you'll actually use in your own kitchen.</p>
                 <div style="margin-top: 32px; padding: 24px; background: #fafafa; border-radius: 8px;">
                     <p style="margin: 0 0 16px 0;"><strong>January 15, 2026 • 6:00 PM</strong><br>
@@ -49,8 +49,9 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                     <p style="margin: 0;"><strong>Suggested donation:</strong> $10<br>
                     <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
                 </div>
-                <div style="margin-top: 32px;">
+                <div style="margin-top: 32px; display: flex; gap: 16px; flex-wrap: wrap;">
                     <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
+                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon:+Elevated+Cuisine&dates=20260115T180000/20260115T200000&details=Explore+how+altitude+changes+the+rules+of+cooking+and+baking+with+the+culinary+team+from+Colorado+Mountain+College.&location=EVO3+Workspace,+620+E+Main+St+%236,+Frisco,+CO+80443&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
                 </div>
             </div>
         </div>
