--- a/website/404.html
+++ b/website/404.html
@@ -22,7 +22,7 @@ permalink: /404.html
       <div style="text-align: left; background: var(--cream); padding: 32px; border-radius: 8px;">
         <h3 style="margin: 0 0 24px; font-size: 1.25rem; color: var(--charcoal);">Looking for something specific?</h3>
         <ul style="list-style: none; padding: 0; margin: 0; display: grid; gap: 12px;">
-          <li><a href="/#salon" style="color: var(--teal); text-decoration: none; font-weight: 500;">→ January Salon Event</a></li>
+          <li><a href="/salon/" style="color: var(--teal); text-decoration: none; font-weight: 500;">→ January Salon Event</a></li>
           <li><a href="/#main-event" style="color: var(--teal); text-decoration: none; font-weight: 500;">→ October 2026 Main Event</a></li>
           <li><a href="/talks/" style="color: var(--teal); text-decoration: none; font-weight: 500;">→ Watch Past Talks</a></li>
           <li><a href="/volunteer/" style="color: var(--teal); text-decoration: none; font-weight: 500;">→ Volunteer</a></li>
