Create a shared classes for various container sizes.

--- a/website/index.html
+++ b/website/index.html
@@ -89,7 +89,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
 <!-- Featured Talks Section -->
 <section class="section section-full" id="featured-talks" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Featured Talks</div>
             <h2 class="section-title">Ideas from Our Community</h2>
@@ -178,13 +178,13 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
 <!-- Sponsors Section -->
 <section class="section section-full sponsors-section" id="sponsors" style="background: #fff; border-top: 1px solid #e0e0e0;">
-    <div class="section-inner" style="max-width: 900px; margin: 0 auto;">
+    <div class="section-inner container-md">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Partnership Opportunities</div>
             <h2 class="section-title">Why Sponsor TEDxBreckenridge?</h2>
         </div>
 
-        <div style="max-width: 800px; margin: 0 auto;">
+        <div class="container-sm">
             <p style="font-size: 1.125rem; line-height: 1.8; margin-bottom: 32px; text-align: center; color: #666;">
                 Sponsoring TEDxBreckenridge connects your business with a community passionate about innovation, creativity, and meaningful change. Your support helps bring world-class ideas to Summit County while demonstrating your commitment to local culture and education.
             </p>
