--- a/website/salon.html
+++ b/website/salon.html
@@ -13,7 +13,7 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
 </section>
 
 <section class="section section-full" style="background: #fff; padding-top: 40px;">
-    <div class="section-inner" style="max-width: 800px; margin: 0 auto;">
+    <div class="section-inner container-sm">
         <div style="font-size: 1.125rem; line-height: 1.8; color: #333;">
             <p style="margin-bottom: 32px;">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
 
@@ -60,7 +60,7 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
 
 <!-- Upcoming Salons Schedule -->
 <section class="section section-full" style="background: #f9f9f9;">
-    <div class="section-inner" style="max-width: 800px; margin: 0 auto;">
+    <div class="section-inner container-sm">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">2026 Season</div>
             <h2 class="section-title">Upcoming Salon Events</h2>
