--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -15,7 +15,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 
 <!-- 2025: METAMORPHOSIS -->
 <section class="section talks-year-section" id="metamorphosis" style="background: #fff; padding: 120px 24px;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" style="width: 100%; height: auto;">
             <div>
@@ -109,7 +109,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 
 <!-- 2023: INSTINCT -->
 <section class="section talks-year-section" id="instinct" style="background: var(--sand); padding: 120px 24px;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" style="width: 100%; height: auto;">
             <div>
@@ -203,7 +203,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 
 <!-- 2022: INTEGRATE -->
 <section class="section talks-year-section" id="integrate" style="background: #fff; padding: 120px 24px;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" style="width: 100%; height: auto;">
             <div>
@@ -297,7 +297,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 
 <!-- 2021: EXPAND -->
 <section class="section talks-year-section" id="expand" style="background: var(--sand); padding: 120px 24px;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" style="width: 100%; height: auto;">
             <div>
@@ -384,7 +384,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 
 <!-- 2020: CONNECTION -->
 <section class="section talks-year-section" id="connection" style="background: #fff; padding: 120px 24px;">
-    <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
+    <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" style="width: 100%; height: auto;">
             <div>
