--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -108,7 +108,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2023: INSTINCT -->
-<section class="section talks-year-section" id="instinct" style="background: var(--sand); padding: 120px 24px;">
+<section class="section talks-year-section bg-sand" id="instinct" style="padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" style="width: 100%; height: auto;">
@@ -296,7 +296,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2021: EXPAND -->
-<section class="section talks-year-section" id="expand" style="background: var(--sand); padding: 120px 24px;">
+<section class="section talks-year-section bg-sand" id="expand" style="padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" style="width: 100%; height: auto;">
