--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -25,7 +25,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             </div>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+        <div class="grid-auto-fit">
             <div>
                 <div class="video-wrapper aspect-video" data-video-id="iIWd6FbQqtM"></div>
                 <div class="video-info">
@@ -119,7 +119,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             </div>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+        <div class="grid-auto-fit">
             <div>
                 <div class="video-wrapper aspect-video" data-video-id="t-J0-Ymvr0o"></div>
                 <div class="video-info">
@@ -213,7 +213,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             </div>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+        <div class="grid-auto-fit">
             <div>
                 <div class="video-wrapper aspect-video" data-video-id="b64-KsZR6Gs"></div>
                 <div class="video-info">
@@ -307,7 +307,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             </div>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+        <div class="grid-auto-fit">
             <div>
                 <div class="video-wrapper aspect-video" data-video-id="PctYfeyWhc4"></div>
                 <div class="video-info">
@@ -394,7 +394,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             </div>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+        <div class="grid-auto-fit">
             <div>
                 <div class="video-wrapper aspect-video" data-video-id="r2PRMGwnuLQ"></div>
                 <div class="video-info">
