Address remaining inline styles.

--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -17,7 +17,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 <section class="section talks-year-section" id="metamorphosis" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
-            <img src="{{ '/assets/images/heroes/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" style="width: 100%; height: auto;">
+            <img src="{{ '/assets/images/heroes/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" class="img-fluid">
             <div>
                 <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2025</div>
                 <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">METAMORPHOSIS</h2>
@@ -111,7 +111,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 <section class="section talks-year-section bg-sand" id="instinct" style="padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
-            <img src="{{ '/assets/images/heroes/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" style="width: 100%; height: auto;">
+            <img src="{{ '/assets/images/heroes/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" class="img-fluid">
             <div>
                 <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--teal);">2023</div>
                 <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">INSTINCT</h2>
@@ -205,7 +205,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 <section class="section talks-year-section" id="integrate" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
-            <img src="{{ '/assets/images/heroes/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" style="width: 100%; height: auto;">
+            <img src="{{ '/assets/images/heroes/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" class="img-fluid">
             <div>
                 <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2022</div>
                 <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">INTEGRATE</h2>
@@ -299,7 +299,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 <section class="section talks-year-section bg-sand" id="expand" style="padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
-            <img src="{{ '/assets/images/heroes/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" style="width: 100%; height: auto;">
+            <img src="{{ '/assets/images/heroes/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" class="img-fluid">
             <div>
                 <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--teal);">2021</div>
                 <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">EXPAND</h2>
@@ -386,7 +386,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 <section class="section talks-year-section" id="connection" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
-            <img src="{{ '/assets/images/heroes/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" style="width: 100%; height: auto;">
+            <img src="{{ '/assets/images/heroes/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" class="img-fluid">
             <div>
                 <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2020 • First Event</div>
                 <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">CONNECTION</h2>
