--- a/website/salon.html
+++ b/website/salon.html
@@ -66,41 +66,43 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
             <h2 class="section-title">Upcoming Salon Events</h2>
         </div>
 
-        <div style="display: grid; gap: 24px;">
+        <div class="grid-gap-24">
             <!-- Salon 1 -->
-            <div style="padding: 32px; background: #fff; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                <h3 style="margin: 0 0 8px 0; font-size: 1.5rem; color: #e62b1e;">Elevated Cuisine: The Science and Art of Cooking at Altitude</h3>
-                <p style="margin: 0 0 16px 0; color: #666; font-size: 1rem;">Explore how altitude changes the rules of cooking and baking with the culinary team from Colorado Mountain College.</p>
-                <p style="margin: 0 0 24px 0; font-size: 0.875rem; color: #767676;"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
-                <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
+            <div class="card-white">
+                <h3 style="color: var(--ted-red);">Elevated Cuisine: The Science and Art of Cooking at Altitude</h3>
+                <p>Explore how altitude changes the rules of cooking and baking with the culinary team from Colorado Mountain College.</p>
+                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
+                <div class="mt-24">
+                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
+                </div>
             </div>
 
             <!-- Salon 2 - March -->
-            <div style="padding: 32px; background: #fff; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                <h3 style="margin: 0 0 8px 0; font-size: 1.5rem; color: #333;">March Salon</h3>
-                <p style="margin: 0 0 16px 0; color: #666; font-size: 1rem;">Topic and details to be announced.</p>
-                <p style="margin: 0; font-size: 0.875rem; color: #767676;"><strong>March 2026</strong><br>Date and location TBD</p>
+            <div class="card-white">
+                <h3 class="text-charcoal">March Salon</h3>
+                <p>Topic and details to be announced.</p>
+                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>March 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 3 - April -->
-            <div style="padding: 32px; background: #fff; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                <h3 style="margin: 0 0 8px 0; font-size: 1.5rem; color: #333;">April Salon</h3>
-                <p style="margin: 0 0 16px 0; color: #666; font-size: 1rem;">Topic and details to be announced.</p>
-                <p style="margin: 0; font-size: 0.875rem; color: #767676;"><strong>April 2026</strong><br>Date and location TBD</p>
+            <div class="card-white">
+                <h3 class="text-charcoal">April Salon</h3>
+                <p>Topic and details to be announced.</p>
+                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>April 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 4 - June -->
-            <div style="padding: 32px; background: #fff; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                <h3 style="margin: 0 0 8px 0; font-size: 1.5rem; color: #333;">June Salon</h3>
-                <p style="margin: 0 0 16px 0; color: #666; font-size: 1rem;">Topic and details to be announced.</p>
-                <p style="margin: 0; font-size: 0.875rem; color: #767676;"><strong>June 2026</strong><br>Date and location TBD</p>
+            <div class="card-white">
+                <h3 class="text-charcoal">June Salon</h3>
+                <p>Topic and details to be announced.</p>
+                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>June 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 5 - August -->
-            <div style="padding: 32px; background: #fff; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-                <h3 style="margin: 0 0 8px 0; font-size: 1.5rem; color: #333;">August Salon</h3>
-                <p style="margin: 0 0 16px 0; color: #666; font-size: 1rem;">Topic and details to be announced.</p>
-                <p style="margin: 0; font-size: 0.875rem; color: #767676;"><strong>August 2026</strong><br>Date and location TBD</p>
+            <div class="card-white">
+                <h3 class="text-charcoal">August Salon</h3>
+                <p>Topic and details to be announced.</p>
+                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>August 2026</strong><br>Date and location TBD</p>
             </div>
         </div>
 
